// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Common.Router - Internal Interface test allowPageLeave() 1`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;

exports[`UU5.Common.Router - Internal Interface test allowPageLeave() 2`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;

exports[`UU5.Common.Router - Internal Interface test preventPageLeave() 1`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;

exports[`UU5.Common.Router - Internal Interface test preventPageLeave() 2`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;

exports[`UU5.Common.Router - Internal Interface test scrollToFragment() 1`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;

exports[`UU5.Common.Router - Internal Interface test scrollToFragment() 2`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;

exports[`UU5.Common.Router - Internal Interface test setRoute() 1`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;

exports[`UU5.Common.Router - Internal Interface test setRoute() 2`] = `
<ContextProvider
  value={
    Object {
      "_intermediaryConfirm": null,
      "allow": [Function],
      "confirm": [Function],
      "id": null,
      "nextRoute": null,
      "prevent": [Function],
      "refuse": [Function],
    }
  }
>
  <RouteComponent
    content="component, UC direct, no history"
    key=".0"
    params={
      Object {
        "noHistory": true,
      }
    }
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</ContextProvider>
`;
